--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -2,8 +2,7 @@
     height: 6.5rem; //65px
     box-shadow: 0 2px 4px 0 rgba(0,0,0,1);
 
-
-    .wrap{
+  .wrap{
         max-width: 1450px;
         height: 100%;
         margin: 0 auto;
@@ -21,5 +20,29 @@
          width: 100%;
          margin: 0;
      }
+    }
+
+    .callToActions{
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        -webkit-transform:translateY(-50%);
+        -moz-transform:translateY(-50%);
+        transform:translateY(-50%);
+    }
+    ul,li{
+        margin: 0;
+        padding: 0;
+    }
+    li{
+        list-style-type: none;
+      a{
+          font-size: 1.8rem;
+          line-height: 1;
+          color:black;
+          text-decoration: none;
+          text-transform: uppercase;
+      }
+          
     }
 }
