--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -35,7 +35,14 @@
         padding: 0;
     }
     li{
+        display: inline;
+        margin-right: 1.5rem;
         list-style-type: none;
+    &:last-child{
+        margin-right: 0;
+    }    
+
+
       a{
           font-size: 1.8rem;
           line-height: 1;
