--- a/src/components/SignUp/styles.scss
+++ b/src/components/SignUp/styles.scss
@@ -1,4 +1,4 @@
-.signin{
+.signup{
     display: block;
     width: 100%;
     max-width: 40.0rem;
@@ -14,15 +14,15 @@
             line-height: 1;
             font-weight: 400;
             text-align: center;
-            margin: 0 auto 3rem;
+            margin: 0 auto;
             padding: 0 auto;
             text-transform: uppercase;
             display: block;
             width: 100%;
         }
-
-        .socialSignIn{
-            margin: .5rem auto 0;
+        
+        .formWrap{
+            margin: 3rem auto;
         }
     }
 
