--- a/src/components/SignIn/styles.scss
+++ b/src/components/SignIn/styles.scss
@@ -1,29 +1,13 @@
-.signin{
-    display: block;
-    width: 100%;
-    max-width: 40.0rem;
-    margin:4rem auto 6rem;
-    border: 1px solid #000000;
+.socialSignIn {
+  margin: 0.5rem auto 0;
+}
 
-    .wrap{
+.links{
+  display: block;
+  width: 100%;
+  margin: 1.5rem auto 0;
 
-        padding: 10px;
-
-        h2{
-            font-size: 22px;
-            line-height: 1;
-            font-weight: 400;
-            text-align: center;
-            margin: 0 auto 3rem;
-            padding: 0 auto;
-            text-transform: uppercase;
-            display: block;
-            width: 100%;
-        }
-
-        .socialSignIn{
-            margin: .5rem auto 0;
-        }
-    }
-
+  a{
+    color: black;
+  }
 }
