Refractor some code & add manage products with option to add product and delete products directly

--- a/src/components/forms/Button/styles.scss
+++ b/src/components/forms/Button/styles.scss
@@ -6,7 +6,7 @@
     font-weight: 300;
     text-transform: uppercase;
     color: white;
-    padding:1rem 0;
+    padding: 1rem 10px;
     background: black;
     margin: 0 auto;
     border: 0;
