--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,55 +1,89 @@
-.header{
-    height: 6.5rem; //65px
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,1);
+.header {
+  height: 6.5rem; //65px
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 1);
 
-  .wrap{
-        max-width: 1450px;
-        height: 100%;
-        margin: 0 auto;
-        position: relative;
+  .wrap {
+    max-width: 1450px;
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+  }
+  .logo {
+    width: 13rem;
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    transform: translateY(-50%);
+    img {
+      display: block;
+      width: 100%;
+      margin: 0;
     }
-    .logo{
-     width: 13.0rem;
-     position: absolute;
-     top: 50%;   left: 10px;
-     -webkit-transform:translateY(-50%);
-     -moz-transform:translateY(-50%);
-     transform:translateY(-50%);
-     img{
-         display: block;
-         width: 100%;
-         margin: 0;
-     }
+  }
+  nav {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+
+    ul,
+    ul li {
+      padding: 0;
+      margin: 0;
+      height: 100%;
     }
 
-    .callToActions{
-        position: absolute;
-        right: 10px;
-        top: 50%;
-        -webkit-transform:translateY(-50%);
-        -moz-transform:translateY(-50%);
-        transform:translateY(-50%);
-    }
-    ul,li{
-        margin: 0;
-        padding: 0;
-    }
-    li{
-        display: inline;
-        margin-right: 1.5rem;
+    ul {
+      text-align: center;
+
+      li {
+        display: inline-block;
+        margin: 0 1rem;
         list-style-type: none;
-    &:last-child{
-        margin-right: 0;
-    }    
 
-
-      a{
+        a {
           font-size: 1.8rem;
-          line-height: 1;
-          color:black;
+          line-height: 6.5rem;
+          vertical-align: middle;
+          color: black;
           text-decoration: none;
           text-transform: uppercase;
+          cursor: pointer;
+        }
       }
-          
     }
+  }
+
+  .callToActions {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  ul,
+  li {
+    margin: 0;
+    padding: 0;
+  }
+  li {
+    display: inline;
+    margin-right: 1.5rem;
+    list-style-type: none;
+    &:last-child {
+      margin-right: 0;
+    }
+
+    a {
+      font-size: 1.8rem;
+      line-height: 1;
+      color: black;
+      text-decoration: none;
+      text-transform: uppercase;
+    }
+  }
 }
